# kinectbot

./: .gitignore  README.md
kinectbot_description/: CMakeLists.txt  package.xml
kinectbot_description/gazebo/: kinectbot_materials.gazebo  kinectbot_physics.gazebo  kinectbot_plugins.gazebo
kinectbot_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  kinectbot_amcl.launch  kinectbot_rviz.launch  kinectbot_rviz_gmapping.launch  nav.rviz
kinectbot_description/meshes/: base_link.stl  bolt_1_1.stl  bolt_2_1.stl  bolt_3_1.stl  bolt_4_1.stl  castor_front_1.stl  castor_rear_1.stl  kinect_1.stl  mid_plate_1.stl  motor_left_1.stl  motor_right_1.stl  wheel_left_1.stl  wheel_right_1.stl
kinectbot_description/urdf/: kinectbot.gazebo  kinectbot.trans  kinectbot.xacro  materials.xacro
kinectbot_gazebo/: CMakeLists.txt  package.xml
kinectbot_gazebo/launch/: kinectbot_house.launch
kinectbot_navigation/: CMakeLists.txt  package.xml
kinectbot_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
kinectbot_navigation/launch/: kinectbot_navigation.launch  move_base.launch
kinectbot_navigation/maps/: small_office.yaml  turtlebot_house.yaml
