<?xml version="1.0"?>
<package format="2">
  <name>kinectbot_navigation</name>
  <version>0.0.0</version>
  <description>The kinectbot_navigation package</description>

  <maintainer email="karthi@dronesatrk.com">karthi</maintainer>

  <license>K</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>gmapping</depend>
  <depend>teleop_twist_keyboard</depend>

</package>